# mua-connect-app

./: readme.md
.claude/: settings.local.json
backend/: .env  .env.example  Cargo.toml  sample_bookings.sql
backend/migrations/: 001_initial.sql  002_create_availability_slots.sql
backend/src/: main.rs
backend/src/examples/: service_usage.rs
backend/src/handlers/: auth.rs  bookings.rs  dashboard.rs  dashboard_original.rs  mod.rs  muas.rs  users.rs
backend/src/models/: availability.rs  booking.rs  dashboard.rs  mod.rs  mua.rs  portfolio.rs  review.rs  user.rs
backend/src/repository/: booking_repository.rs  mod.rs  mua_repository.rs  traits.rs  user_repository.rs
backend/src/services/: auth_service.rs  booking_service.rs  container.rs  dashboard_service.rs  mod.rs  mua_service.rs  s3_service.rs  traits.rs  user_service.rs
backend/src/utils/: helpers.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  bookings.ts  client.ts  dashboard.ts  muas.ts  portfolio.ts
frontend/src/components/availability/: AvailabilityCalendar.tsx  AvailabilityManager.tsx
frontend/src/components/calendar/: BookingDetailModal.tsx  CalendarView.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/portfolio/: PortfolioManager.tsx  PortfolioUpload.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  MuaProfile.tsx  Profile.tsx  Register.tsx  Search.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: imageCompression.ts
(+1 files in other folders)
