[package]
name = "mua-connect-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-cors = "0.6"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.0"
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "bigdecimal"] }
dotenvy = "0.15"
bcrypt = "0.14"
jsonwebtoken = "8.2"
validator = { version = "0.16", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
async-trait = "0.1"
aws-config = "0.55"
aws-sdk-s3 = "0.28"
aws-smithy-http = "0.55"
aws-credential-types = "0.55"
bytes = "1.4"
base64 = "0.21"
mime = "0.3"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
